Fix: Table Responsiveness on mobile #9

--- a/src/hostinpanda.web/wwwroot/css/site.css
+++ b/src/hostinpanda.web/wwwroot/css/site.css
@@ -7,11 +7,13 @@
     color: white;
 }
 
-.content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+@media screen and (min-width: 700px) {
+    .content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
 
 .body-content {
